--- a/app/src/main/res/layout/items_list.xml
+++ b/app/src/main/res/layout/items_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,23 +9,25 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:clickable="true"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="@drawable/button_background"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/title"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="#000000"
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
+        android:text="Hello"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/genre1"
         android:layout_below="@id/title"
         android:layout_width="wrap_content"
-        android:textSize="25sp"
+        android:textSize="16sp"
+        android:text="Name"
         android:textColor="#000000"
         android:layout_height="wrap_content" />
 
@@ -33,7 +35,8 @@
         android:id="@+id/year1"
         android:textColor="#000000"
         android:layout_width="wrap_content"
-        android:textSize="25sp"
+        android:textSize="16sp"
+        android:text="Details"
         android:layout_alignParentRight="true"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+</LinearLayout>
