login screen changes

--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -5,4 +5,6 @@
         android:centerColor="#FF33A8"
         android:endColor="#FF33A8"
         android:angle="90" />
+
+    <corners android:radius="30dp"></corners>
 </shape>
