--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -34,22 +34,26 @@
             android:id="@+id/et_user_name"
             android:hint="User Name"
             android:textColor="#6bfff7"
-            android:textColorHint="#52afaa"
+            android:textColorHint="#000000"
             android:textAlignment="center"
+            android:background="@drawable/login_edit_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="50dp"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
             android:hint="Password"
             android:textColor="#6bfff7"
-            android:textColorHint="#52afaa"
+            android:textColorHint="#000000"
             android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/login_edit_background"
             android:inputType="textPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="50dp"/>
 
             <TextView
+                android:id="@+id/btnFrogetPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Forget Password?"
@@ -58,6 +62,7 @@
                 android:layout_gravity="center" />
 
             <Button
+                android:id="@+id/btnLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
