--- a/app/src/main/res/drawable/login_edit_background.xml
+++ b/app/src/main/res/drawable/login_edit_background.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/purple_200"></solid>
+    <solid android:color="@color/white"></solid>
     <corners android:radius="30dp"></corners>
 
 </shape>
