--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/purple_image"
     tools:context=".activities.LoginScreen">
 
     <com.google.android.material.card.MaterialCardView
@@ -21,6 +24,8 @@
         app:cardElevation="5dp"
         app:cardMaxElevation="8dp"
         app:contentPadding="10dp"
+        android:backgroundTint="@color/textColor"
+        android:background="@drawable/switch_tumbs"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="false">
 
@@ -58,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:text="Forget Password?"
                 android:textSize="16sp"
+                android:textColor="@color/black"
                 android:layout_marginTop="2dp"
                 android:layout_marginLeft="100dp"
                 android:layout_gravity="center" />
@@ -79,6 +85,7 @@
                 android:textSize="16sp"
                 android:layout_marginTop="2dp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:layout_gravity="center" />
 
         </LinearLayout>
