--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         android:textColor="#6bfff7"
         android:textColorHint="#000000"
         android:textAlignment="center"
-        android:background="@drawable/login_edit_background"
+        android:background="@drawable/button_background"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
@@ -47,23 +47,23 @@
             android:background="@drawable/button_background"
             android:text="Send Data"/>
 
-    <TextView
-        android:id="@+id/hereFragment1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textAllCaps="false"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center"
-        android:layout_marginTop="200dp"
-        android:background="@color/pinkColor"
-        android:text="Click Here to See UI Components"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <TextView-->
+<!--        android:id="@+id/hereFragment1"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="25sp"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="200dp"-->
+<!--        android:background="@color/pinkColor"-->
+<!--        android:text="Click Here to See UI Components"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     </LinearLayout>
 
