--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,8 +14,8 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/et_user_name"
+    <EditText
+        android:id="@+id/etUserName"
         android:hint="Type Something"
         android:textColor="#6bfff7"
         android:textColorHint="#000000"
@@ -25,7 +25,7 @@
         android:layout_height="50dp"/>
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/textHome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -67,4 +67,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
