--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -38,7 +38,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_user_name"
             android:hint="Username"
-            android:textColor="#6bfff7"
+            android:textColor="@color/black"
             android:textColorHint="#000000"
             android:textAlignment="center"
             android:background="@drawable/login_edit_background"
@@ -48,7 +48,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
             android:hint="Password"
-            android:textColor="#6bfff7"
+            android:textColor="@color/black"
             android:textColorHint="#000000"
             android:textAlignment="center"
             android:layout_marginTop="20dp"
