--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -42,6 +42,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="96dp"
         android:hint="@string/prompt_email"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:textAlignment="center"
@@ -63,6 +64,7 @@
         android:background="@drawable/switch_tumbs"
         android:backgroundTint="@color/white"
         android:inputType="textPassword"
+        android:textColor="@color/black"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +79,7 @@
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:background="@drawable/switch_tumbs"
         android:inputType="textPassword"
         android:backgroundTint="@color/white"
