--- a/app/src/main/res/menu/auth_navigation.xml
+++ b/app/src/main/res/menu/auth_navigation.xml
@@ -10,12 +10,12 @@
     <item
         android:id="@+id/action_notification"
         android:orderInCategory="100"
-        android:title="@string/action_notification"
+        android:title="@string/action_widgets"
         app:showAsAction="never" />
 
-<!--    <item-->
-<!--        android:id="@+id/action_settings"-->
-<!--        android:orderInCategory="100"-->
-<!--        android:title="@string/action_settings"-->
-<!--        app:showAsAction="never" />-->
+    <item
+        android:id="@+id/action_nav_drawer"
+        android:orderInCategory="100"
+        android:title="@string/action_nav_side_drawer"
+        app:showAsAction="never" />
 </menu>
