--- a/app/src/main/res/layout/items_view_pager_slides.xml
+++ b/app/src/main/res/layout/items_view_pager_slides.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -19,7 +20,7 @@
     <ImageView
         android:id="@+id/vpImg1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="450dp"
         android:src="@drawable/vp_image1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +30,11 @@
         android:id="@+id/descriptionTv"
         android:text="Here can be long and multiple lined description of the title..."
         android:textSize="20sp"
-        android:textColor="#000"
+        android:textColor="#000000"
+        android:padding="10dp"
+        android:textStyle="italic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
