--- a/app/src/main/res/menu/auth_navigation.xml
+++ b/app/src/main/res/menu/auth_navigation.xml
@@ -18,4 +18,10 @@
         android:orderInCategory="100"
         android:title="@string/action_nav_side_drawer"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_view_slider"
+        android:orderInCategory="100"
+        android:title="@string/action_img_slider"
+        app:showAsAction="never" />
 </menu>
